create nwe project

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,58 @@
-<header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
+<header class="page-header">
+  <div class="header-container container">
+    <!-- Logotype -->
+    <a class="logo" href="./index.html">
+      <svg class="logo-icon" width="60" height="60" aria-label="logo">
+        <use href="../img/logo.svg"></use>
+      </svg>
+      Звільни
+      <span class="logo-italic-text">простір</span>
+      <span class="logo-smal-text">Звільніть свій простір з легкістю!</span>
+    </a>
+    <!-- Navigation  -->
+    <nav class="header-nav">
+      <ul class="header-nav-list">
+        <li class="header-nav-item">
+          <a class="header-nav-link" href="">
+            Як це працює
+          </a>
+        </li>
+        <li class="header-nav-item">
+          <a class="header-nav-link" href="">
+            Ціни
+          </a>
+        </li>
+        <li class="header-nav-item">
+          <a class="header-nav-link" href="">
+            Галерея
+          </a>
+        </li>
+        <li class="header-nav-item">
+          <a class="header-nav-link" href="">
+            Контакти
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- Contacts -->
+    <ul class="header-contact-list">
+      <li class="header-contact-item">
+        <a class="header-contact-link" href="">
+          <svg class="contact-map-icon" width="32" height="32" aria-label="contact map icon">
+            <use href="../img/map.svg"></use>
+          </svg>
+          м.Вінниця
+          <p>Пн-Сб: 8:00-20:00</p>
+        </a>
       </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
+      <li class="header-contact-item">
+        <a class="header-contact-link" href="">
+          <svg class="contact-phone-icon" width="32" height="32" aria-label="contact phone icon">
+            <use href="../img/phone.svg"></use>
+          </svg>
+          +38(067)-000-00-00
+        </a>
       </li>
     </ul>
-  </nav>
+  </div>
 </header>
