--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,15 @@
 <header class="page-header">
   <div class="header-container container">
     <!-- Logotype -->
-    <a class="logo" href="./index.html">
-      <svg class="logo-icon" width="60" height="60" aria-label="logo">
-        <use href="../img/logo.svg"></use>
-      </svg>
-      Звільни
-      <span class="logo-italic-text">простір</span>
-      <span class="logo-smal-text">Звільніть свій простір з легкістю!</span>
+    <a class="logo-link" href="./index.html">
+      <img src="./img/logo.png" alt="Logotype" width="80" height="68">
+      <div class="container-text-logo">
+        <div class="container-logo-title">
+          <span class="logo-text">Звільни</span>
+          <span class="logo-italic-text">простір</span>
+        </div>
+        <span class="logo-small-text">Звільніть свій простір з легкістю!</span>
+      </div>
     </a>
     <!-- Navigation  -->
     <nav class="header-nav">
@@ -39,16 +41,15 @@
       <li class="header-contact-item">
         <a class="header-contact-link" href="">
           <svg class="contact-map-icon" width="32" height="32" aria-label="contact map icon">
-            <use href="../img/map.svg"></use>
+            <use href="./img/map.svg#map"></use>
           </svg>
-          м.Вінниця
-          <p>Пн-Сб: 8:00-20:00</p>
+          м.Вінниця <br> Пн-Сб: 8:00-20:00
         </a>
       </li>
       <li class="header-contact-item">
-        <a class="header-contact-link" href="">
+        <a class="header-contact-link" href="tel:+380670000000">
           <svg class="contact-phone-icon" width="32" height="32" aria-label="contact phone icon">
-            <use href="../img/phone.svg"></use>
+            <use xlink:href="./img/phone.svg#phone"></use>
           </svg>
           +38(067)-000-00-00
         </a>
