--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,7 +41,7 @@
       <li class="header-contact-item">
         <a class="header-contact-link" href="">
           <svg class="contact-map-icon" width="32" height="32" aria-label="contact map icon">
-            <use href="./img/map.svg#map"></use>
+            <use href="/src/img/map.svg"></use>
           </svg>
           м.Вінниця <br> Пн-Сб: 8:00-20:00
         </a>
