--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -26,12 +26,13 @@ a {
 
 button {
   cursor: pointer;
+  border: none;
 }
 
 img {
   display: block;
   max-width: 100%;
-  height: auto;
+
 }
 
 body {
