--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,5 +1,6 @@
 .container {
     padding: 0 60px;
+    width: 1440px;
 }
 
 .hero {
@@ -7,8 +8,8 @@
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    background: url(/img/background-3.png) center / cover no-repeat, rgba(255, 255, 255, 0.70);
-    background-color: rgb(139, 139, 130);
+    border-bottom: 2px dashed var(--yellow, #DFB71D);
+
 }
 
 .hero-content-box {
