--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
 
 @import url('./header.css');
 @import url('./hero.css');
+@import url('./about.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -23,4 +24,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body {
+  background: url(/img/background-3.png) center / cover no-repeat, rgba(255, 255, 255, 0.70);
+  background-color: rgb(151, 163, 192);
 }
